UPDATE endpoint added
